--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
           <a href="#">PALETTES</a>
         </div>
       </div>
-      <!-- Sell Rebon -->
-      <div class="sell-rebon">
-        <p>
-          <span>100% FREE SHIPPING!</span> over $100 purchases and
-          <span>PLATINUM</span> membership!
-        </p>
-      </div>
     </nav>
-
+    <!-- Sell Rebon -->
+    <div class="sell-rebon">
+      <p>
+        <span>100% FREE SHIPPING!</span> over $100 purchases and
+        <span>PLATINUM</span> membership!
+      </p>
+    </div>
     <!-- ==================== Header Section =================== -->
     <header>
       <div class="container">
@@ -54,9 +53,7 @@
           similique, obcaecati optio praesentium, cumque harum fugit iusto nemo
           quam quas facilis sapiente nihil, aliquam consequatur quos qui sunt.
         </p>
-        <a href="#" class="hvr"
-          ><i class="uil uil-shopping-bag"></i> SHOP NOW</a
-        >
+        <a href="#" class="hvr">SHOP NOW</a>
       </div>
     </header>
     <!-- ==================== Main Section =================== -->
