--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           similique, obcaecati optio praesentium, cumque harum fugit iusto nemo
           quam quas facilis sapiente nihil, aliquam consequatur quos qui sunt.
         </p>
-        <a href="#" class="hvr">SHOP NOW</a>
+        <a href="#" class="hvr"
+          ><i class="uil uil-shopping-bag"></i> SHOP NOW</a
+        >
       </div>
     </header>
     <!-- ==================== Main Section =================== -->
@@ -148,10 +150,11 @@
         <div class="card-info about-card-info">
           <h2>About</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic nisi,
-            corporis inventore vero reiciendis exercitationem quo natus
-            repudiandae delectus quaerat excepturi ullam atque in sit assumenda
-            consequuntur illo quisquam necessitatibus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            quibusdam a veritatis explicabo, non culpa in perspiciatis laborum
+            amet unde libero consectetur accusamus voluptatum omnis qui quis.
+            Nemo molestiae minus architecto velit perspiciatis distinctio?
+            Error!
           </p>
           <a href="#" class="btn btn-primary">LEARN MORE</a>
         </div>
@@ -301,10 +304,10 @@
         <div class="card-info contact-card-info">
           <h2>Contact</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic nisi,
-            corporis inventore vero reiciendis exercitationem quo natus
-            repudiandae delectus quaerat excepturi ullam atque in sit assumenda
-            consequuntur illo quisquam necessitatibus.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
+            voluptatibus ex deserunt harum, ratione earum distinctio libero
+            laudantium reprehenderit assumenda maiores porro amet labore cum
+            natus atque! Nemo reiciendis earum dolorum iste rem harum ipsum!
           </p>
           <a href="#" class="btn btn-primary">CONTACT US</a>
         </div>
